--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="row mb-3">
         <label for="productCountInput" class="form-label">productCount:</label>
-        <input type="text" id="productCountInput" class="form-control ms-3" />
+        <input type="number" id="productCountInput" class="form-control ms-3" />
       </div>
       <button onclick="addProduct();" id="mainBtn" class="btn btn-outline-info">
         addProduct
